Fixed menus overlapping with the title of the page once and for all.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ h1 {
 .navigator {
 	padding: 0px;
 	margin: 0px;
-	position: absolute;
 	right: 0px;
 }
 .navitem {
